# Network_Programming_2022

./: .gitignore  README.md
NP/: CMakeLists.txt  CMakeLists.txt.user.069115e
NP/Sources/: main.cpp  server.cpp  server.h  service.cpp  service.h  ship.cpp  ship.h  zeeslag.cpp  zeeslag.h
NP/Sources/battleship/: Board.cpp  Board.hpp  Constants.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Ship.cpp  Ship.hpp  executeMain.cpp  testMain.cpp  utils.cpp  utils.hpp
NP_Client/: CMakeLists.txt  CMakeLists.txt.user.069115e
NP_Client/Sources/: main.cpp  service.cpp  service.h
NP_Client/Sources/ZeroMQ/CMake/: ZeroMQTargets-release.cmake  ZeroMQTargets.cmake
Project/ZMQClient/: main.cpp
Project/ZMQpush/: main.cpp
Project/ZMQsub/: main.cpp
ZMQ_Quest/2EAI-NP-benternet-master/MinZMQt/: main.cpp
ZMQ_Quest/2EAI-NP-benternet-master/ZMQsub/: main.cpp
ZMQ_Quest/ZMQpush/build-ZMQPush-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: build.ninja  (+1 more)
build-NP-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-NP-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/NP_autogen/: deps  mocs_compilation.cpp
build-NP_Client-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-NP_Client-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/NP_Client_autogen/: deps  mocs_compilation.cpp
build-NP_Client-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/NP_autogen/: deps  moc_predefs.h
build-test_broker_interaction-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-tester-Desktop_Qt_6_1_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
test_broker_interaction/: CMakeLists.txt
test_broker_interaction/Sources/: main.cpp
testcode/ZMQ_Quest/: CMakeLists.txt
testcode/ZMQ_Quest/ZMQpush/ZMQPush/: CMakeLists.txt
testcode/ZMQ_Quest/ZMQpush/ZMQPush/Sources/: main.cpp
tester/: CMakeLists.txt  CMakeLists.txt.user.069115e
tester/Sources/: main.cpp
tester/Sources/ZeroMQ/lib/pkgconfig/: libzmq.pc
(+65 files in other folders)
